--- a/Code/postgres/environment.env
+++ b/Code/postgres/environment.env
@@ -7,7 +7,7 @@ config_file=config.json
 database_host=localhost
 database_port=5432
 database_name=tpch
-database_user=postgres
+database_user=tpch
 database_password=********
 database_service_name=postgresql
 
