Saving Metrics collected

--- a/Code/projects/observer/environment.env
+++ b/Code/projects/observer/environment.env
@@ -1,3 +1,3 @@
 EXECUTOR_PORT=43316
-COLLECTOR_ENDPOINT=192.168.2.102:43317/api/v1/client-metrics/add
+COLLECTOR_ENDPOINT=http://192.168.2.102:43317/api/v1/client-metrics/add
 SOCKET_PORT=43318
