--- a/Code/postgres/client/pom.xml
+++ b/Code/postgres/client/pom.xml
@@ -40,6 +40,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.pfg.library</groupId>
             <artifactId>connectors</artifactId>
             <version>1.0-SNAPSHOT</version>
