Adding communication between analyst and orchestrators

--- a/Code/config.json
+++ b/Code/config.json
@@ -1,33 +1,41 @@
 {
     "consoleCommand": "gnome-terminal",
-    "orchestrator": {
-        "address": "192.168.2.104",
-        "port": "43316"
+    "orchestrators": {
+        "postgres": {
+            "address": "192.168.2.104",
+            "port": "43317"
+        }
     },
-    "database": {
-        "host": "localhost",
-        "port": "5432",
-        "name": "tpch",
-        "user": "tpch",
-        "password": "********",
-        "rootPassword": "123456",
-        "sshPort": "22",
-        "restartCommand": "systemctl restart postgresql"
+    "databases": {
+        "postgres": {
+            "host": "localhost",
+            "port": "5432",
+            "name": "tpch",
+            "user": "tpch",
+            "password": "********",
+            "rootPassword": "123456",
+            "sshPort": "22",
+            "restartCommand": "systemctl restart postgresql"
+        }
     },
-    "clientObserver": {
-        "address": "192.168.2.104",
-        "port": "43320"
+    "clientObservers": {
+        "postgres": {
+            "address": "192.168.2.104",
+            "port": "43320"
+        }
     },
-    "serverObserver": {
-        "address": "192.168.2.104",
-        "port": "43319"
+    "serverObservers": {
+        "postgres": {
+            "address": "192.168.2.104",
+            "port": "43319"
+        }
     },
     "collector": {
-    	"port": "43322",
-    	"db_host": "localhost",
-    	"db_port": "5432",
-    	"db_password": "********",
-    	"db_user": "collector",
+        "port": "43322",
+        "db_host": "localhost",
+        "db_port": "5432",
+        "db_password": "********",
+        "db_user": "collector",
         "directive": "http://192.168.2.104:43317/api/v1/directives/add",
         "client-metrics": "http://192.168.2.104:43317/api/v1/client-metrics/add",
         "server-metrics": "http://192.168.2.104:43317/api/v1/server-metrics/add",
