--- a/Code/mongo/client/pom.xml
+++ b/Code/mongo/client/pom.xml
@@ -47,7 +47,20 @@
             <groupId>com.pfg.library</groupId>
             <artifactId>connectors</artifactId>
             <version>1.0-SNAPSHOT</version>
-          </dependency>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+
+        <!-- Logback for SLF4J -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version>
+        </dependency>
 
     </dependencies>
 
