--- a/Code/projects/collector/src/main/resources/application.properties
+++ b/Code/projects/collector/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=collector
 spring.datasource.url=jdbc:postgresql://localhost:5432/collector
 spring.datasource.username=collector
 spring.datasource.password=********
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=43323
